<resources>
    <string name="app_name">Tinder For Food</string>
    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>
<<<<<<< HEAD
    <string name="Rating">Rating</string>
    <string name="RatingValue">3</string>
    <string name="Price">Price</string>
    <string name="PriceValue">$$</string>
    <string name="Distance">Distance</string>
    <string name="minDistance">0</string>
    <string name="maxDistance">20</string>
    <string name="Diet">Diet</string>
    <string name="Meat">Meat-Eater</string>
    <string name="Vegetarian">Vegetarian</string>
    <string name="Vegan">Vegan</string>
    <string name="Preferences">Preferences</string>
=======
    <string name="apiKey">hGAW2FySQrZqdHTxFT4s_fY-4OErTolDk-jyWn9r_6GKi0VCBw_mVcJuqidHQgNkfTSid0Rb4CS5pqrr2AoApLauOJUKalIig1V7Ye6aI2eMalROQzZcPTpiy5PAXHYx</string>
>>>>>>> howie
</resources>
